[package]
name = "valley"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0.25"
parking_lot = "0.11.1"
flurry = "0.3.1"
num-traits = "0.2.14"
regex = "1.5.4"
mashup = "0.1"
lazy_static = "1.4.0"